--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
-  <base href="/" />
+  <base href="/camera-spike-page/" />
 
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport"
