--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
-  <base href="/camera-spike-page/" />
+  <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport"
@@ -14,18 +14,11 @@
   <meta name="msapplication-tap-hig hlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-<link rel="stylesheet" href="styles.5ef7c8ef6c2f35a7ed79.css"></head>
 
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js')
-      .then(() => console.log('service worker installed'))
-      .catch(err => console.log('Error', err));
-  }
-</script>
+<link rel="stylesheet" href="styles.04f538fb2aff7c560f45.css"></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.5f2ff0425371e06b9fb4.js" type="module"></script><script src="runtime-es5.5f2ff0425371e06b9fb4.js" nomodule defer></script><script src="polyfills-es5.befa4caa6291a171b67f.js" nomodule defer></script><script src="polyfills-es2015.f4d09162f068ef1dd55d.js" type="module"></script><script src="main-es2015.e4d56b2dcadb9e3b56ab.js" type="module"></script><script src="main-es5.e4d56b2dcadb9e3b56ab.js" nomodule defer></script></body>
+<script src="runtime-es2015.c916f06dce886f52399d.js" type="module"></script><script src="runtime-es5.c916f06dce886f52399d.js" nomodule defer></script><script src="polyfills-es5.befa4caa6291a171b67f.js" nomodule defer></script><script src="polyfills-es2015.f4d09162f068ef1dd55d.js" type="module"></script><script src="main-es2015.11d13d864cad63f32c9d.js" type="module"></script><script src="main-es5.11d13d864cad63f32c9d.js" nomodule defer></script></body>
 
 </html>
